--- a/css/layouts/sidebar.css
+++ b/css/layouts/sidebar.css
@@ -128,7 +128,8 @@ textarea:not([rows]) {
   visibility: hidden;
   pointer-events: none;
   transition: opacity 0.3s ease;
-  z-index: 1;
+  z-index: 4;
+  cursor: pointer;
 }
 
 .darken-overlay.active {
