--- a/scss/layouts/sidebar.scss
+++ b/scss/layouts/sidebar.scss
@@ -56,7 +56,8 @@
     visibility: hidden;
     pointer-events: none;
     transition: opacity 0.3s ease;
-    z-index: 1;
+    z-index: 4;
+    cursor: pointer;
 }
 
 .darken-overlay.active {
