--- a/scss/layouts/_sidebar.scss
+++ b/scss/layouts/_sidebar.scss
@@ -38,6 +38,12 @@
     }
 }
 
+.slider-wrapper {
+    width: 100%;
+    height: 100%;;
+    position: relative;
+}
+
 .sidebar-animation-wrapper {
     position: relative;
     transition: transform 0.4s ease;
