--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -33,6 +33,7 @@ $colour-map: ( // Creates variables to be used in my map.
   nav-security-dd           : #DE093F,
   nav-training-dd           : #A3331D,
   banner-txt                : #FFF,
+  banner-dot                : #FFF,
   banner-btn-hvr            : #E80A42,
   os-btn-txt                : #FFF,
   os-hov-effect             : #FFF,
