--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -10,77 +10,85 @@ $breakpoints: ( // Creates variables to be used in my map.
 );
 
 $colour-map: ( // Creates variables to be used in my map.
-  body-background           : #fff,
-  sidebar-text-color        : #fff,
-  hdr-sb                    : #555,
-  hdr-burger-line           : #FFF,
-  hdr-sb-2                  : #FFF,
-  hdr-logo-2                : #FFF,
-  hdr-logo-2-bg             : #999AA2,
-  hdr-logo-2-bg-hvr         : #7E808A,
-  hdr-border-color          : #5BC0DE,
-  hdr-btn-lines             : #FFF,
-  hdr-btn-hvr               : #22242e,
-  hdr-mouse-bg              : #4183D7,
-  hdr-mouse-hvr             : #2665B5,
-  nav-txt                   : #FFF,
-  nav-icon-hv               : #FFF,
-  nav-software-dd           : #526781,
-  nav-it-dd                 : #286ABD,
-  nav-digital-dd            : #25A25A,
-  nav-telecoms-dd           : #BC2C28,
-  nav-web-dd                : #79539A,
-  nav-security-dd           : #DE093F,
-  nav-training-dd           : #A3331D,
-  banner-txt                : #FFF,
-  banner-dot                : #FFF,
-  banner-btn-software-hvr   : #E8A008, 
-  banner-btn-it-hvr         : #2A6EC6,
-  banner-btn-digital-hvr    : #26AB5F,
-  banner-btn-training-hvr   : #C42E2A,
-  banner-btn-web-hvr        : #7E57A0,
-  banner-btn-security-hvr   : #E80A42,
-  os-btn-txt                : #FFF,
-  os-hov-effect             : #FFF,
-  os-icon                   : #FFF,
-  wt-txt-color              : #fff,
-  wt-btn-bg-1               : #272936,
-  wt-btn-bg-hv-1            : #121318,
-  wt-btn-bg-2               : #4387F6,
-  wt-btn-bg-hv-2            : #166AF4,
-  wt-btn-bg-3               : #00B67B,
-  wt-btn-bg-hv-3            : #009B69,
-  client                    : #A3A8AC,
-  star                      : #FFA500,
-  ln-title-color            : #333645,
-  ln-btn-txt-color          : #FFF,
-  ln-p-color                : #666,
-  logo-txt-color            : #fff,
-  logo-btn-digital          : #00B67B,
-  logo-btn-digital-hover    : #009B69,
-  logo-btn-it               : #4387F6,
-  logo-btn-it-hover         : #166AF4,
-  logo-btn-web              : #926FB1,
-  logo-btn-web-hover        : #7E57A0,
-  logo-btn-software-2       : #F7B322,
-  logo-btn-software-2-hover : #E8A008,
-  footer-txt-color          : #FFF,
-  main-txt-color            : #333645,
-  background-1              : #333645,
-  background-2              : #323544,
-  background-3              : #212330,
-  software                  : #67809F,
-  software-2                : #F7B322,
-  it                        : #4183D7,
-  digital                   : #2ECC71,
-  telecoms                  : #D64541,
-  web                       : #926FB1,
-  security                  : #F62459,
-  training                  : #CE4125,
-  facebook                  : #3B5998,
-  linkedin                  : #0077B5,
-  x                         : #00ACED,
-  instagram                 : #D93175
+  body-background            : #FFF,
+  sidebar-text-color         : #FFF,
+  cookie-text-color          : #666,
+  cookie-btn-txt-color       : #FFF,
+  cookie-change-settings-btn : #999AA2,
+  change-settings-hvr        : #84858F,
+  change-settings-hvr-border : #797A85,
+  accept-cookies-hvr         : #7E57A0,
+  accept-cookies-hvr-border  : #735093,
+  cookie-link-hvr            : #121419,
+  hdr-sb                     : #555,
+  hdr-burger-line            : #FFF,
+  hdr-sb-2                   : #FFF,
+  hdr-logo-2                 : #FFF,
+  hdr-logo-2-bg              : #999AA2,
+  hdr-logo-2-bg-hvr          : #7E808A,
+  hdr-border-color           : #5BC0DE,
+  hdr-btn-lines              : #FFF,
+  hdr-btn-hvr                : #22242E,
+  hdr-mouse-bg               : #4183D7,
+  hdr-mouse-hvr              : #2665B5,
+  nav-txt                    : #FFF,
+  nav-icon-hv                : #FFF,
+  nav-software-dd            : #526781,
+  nav-it-dd                  : #286ABD,
+  nav-digital-dd             : #25A25A,
+  nav-telecoms-dd            : #BC2C28,
+  nav-web-dd                 : #79539A,
+  nav-security-dd            : #DE093F,
+  nav-training-dd            : #A3331D,
+  banner-txt                 : #FFF,
+  banner-dot                 : #FFF,
+  banner-btn-software-hvr    : #E8A008, 
+  banner-btn-it-hvr          : #2A6EC6,
+  banner-btn-digital-hvr     : #26AB5F,
+  banner-btn-training-hvr    : #C42E2A,
+  banner-btn-web-hvr         : #7E57A0,
+  banner-btn-security-hvr    : #E80A42,
+  os-btn-txt                 : #FFF,
+  os-hov-effect              : #FFF,
+  os-icon                    : #FFF,
+  wt-txt-color               : #FFF,
+  wt-btn-bg-1                : #272936,
+  wt-btn-bg-hv-1             : #121318,
+  wt-btn-bg-2                : #4387F6,
+  wt-btn-bg-hv-2             : #166AF4,
+  wt-btn-bg-3                : #00B67B,
+  wt-btn-bg-hv-3             : #009B69,
+  client                     : #A3A8AC,
+  star                       : #FFA500,
+  ln-title-color             : #333645,
+  ln-btn-txt-color           : #FFF,
+  ln-p-color                 : #666,
+  logo-txt-color             : #FFF,
+  logo-btn-digital           : #00B67B,
+  logo-btn-digital-hover     : #009B69,
+  logo-btn-it                : #4387F6,
+  logo-btn-it-hover          : #166AF4,
+  logo-btn-web               : #926FB1,
+  logo-btn-web-hover         : #7E57A0,
+  logo-btn-software-2        : #F7B322,
+  logo-btn-software-2-hover  : #E8A008,
+  footer-txt-color           : #FFF,
+  main-txt-color             : #333645,
+  background-1               : #333645,
+  background-2               : #323544,
+  background-3               : #212330,
+  software                   : #67809F,
+  software-2                 : #F7B322,
+  it                         : #4183D7,
+  digital                    : #2ECC71,
+  telecoms                   : #D64541,
+  web                        : #926FB1,
+  security                   : #F62459,
+  training                   : #CE4125,
+  facebook                   : #3B5998,
+  linkedin                   : #0077B5,
+  x                          : #00ACED,
+  instagram                  : #D93175
 );
 
 //// mixins ////
